fixed country ui overflow

--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -22,6 +22,16 @@ body {
   /* styles/globals.css */
 }
 
+/* Hide scrollbar for all webkit-based browsers */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for Firefox */
+.no-scrollbar {
+  scrollbar-width: none; /* For Firefox */
+}
+
 a,
 button {
   font-family: inherit;
